# Myth

./: CMakeLists.txt  ChangeLog.txt  Dockerfile  Dockerfile.game_search  Dockerfile.roomd  Dockerfile.userd  Dockerfile.webd  Don't Read Me!.txt  Makefile  README.md  README_directory_structure.txt  build_notes.txt  build_settings.txt  directory_structure.txt  docker-compose.yml  docker-entrypoint.sh  ensure_users_db.sh  gen_order  generate_order_database  generate_order_database.c  load_rooms.py  motd  order_header_writer  order_header_writer.c  roomd_new_strace.txt  rooms.lst  sqlite_schema.h  sqlite_utils.c  sqlite_utils.h  startup.sh  task.md  write_orders_db
BungieNetServer/: BungieNetServer.sln  BungieNetServer.vcxproj  BungieNetServer.vcxproj.filters
common/: DiffieHellman.cpp  DiffieHellman.h  Makefile  authentication.c  authentication.h  byte_swapping.c  byte_swapping.h  cJSON.c  cJSON.h  caste.h  cseries.c  cseries.h  encodePackets.cpp  encodePackets.h  game_search_packets.c  game_search_packets.h  game_search_types.h  logging.h  metaserver_codes.h  metaserver_common_structs.h  metaserver_packets.c  metaserver_packets.h  network_queues.c  network_queues.h  order_stats.c  order_stats.h  platform.h  player_search_packets.c  player_search_packets.h  posix_compat.h  ps_query.c  ps_query.h  rb_tree.c  rb_tree.h  room_info.py  room_loader.c  room_loader.h  room_packets.c  room_packets.h  sl_list.c  (+10 more)
config/: bungie.net
data/: orders.db  orders.db.bak  rooms.lst  users.db.bak
game_search_new/: Makefile  game_search_server.c  games_list.c  games_list.h  (+2 more)
(+52 files in other folders)
